[package]
authors = ["Eirik Albrigtsen <analsandblaster@gmail.com>"]
name = "blog"
version = "0.1.0"

[[bin]]
doc = false
name = "blog"
path = "src/main.rs"

[dependencies]
error-chain = "0.9.0"
glob = "0.2.11"
hoedown = "6.0.0"
regex = "0.2.1"
rocket = "0.2.0"
rocket_codegen = "0.2.0"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.5"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.2.0"

[lib]
name = "blog"
path = "src/lib.rs"
