[package]
authors = ["Eirik Albrigtsen <sszynrae@gmail.com>"]
name = "blog"
version = "0.1.0"

[[bin]]
doc = false
name = "blog"
path = "src/main.rs"

[dependencies]
error-chain = "0.9.0"
glob = "0.2.11"
hoedown = "6.0.0"
regex = "0.2.1"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"

[dependencies.rocket_contrib]
default-features = false
features = ["tera_templates"]
version = "0.3.3"

[lib]
name = "blog"
path = "src/lib.rs"
